[Delivers #68051024] Using advice from http://stackoverflow.com/questions/9047703/fixed-position-navbar-obscures-anchors to un-obscure anchor-link header text.

--- a/IFComp/root/static/css/ifcomp.css
+++ b/IFComp/root/static/css/ifcomp.css
@@ -23,3 +23,9 @@ code {
     background: none;
     color: black;
 }
+
+.page-header h1 {
+  padding-top: 60px;
+  margin-top: -60px;
+  display: inline-block; /* required for webkit browsers */
+}
